[package]
name = "bevy_despawn_tree"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "despawn", "tree", "ecs"]
categories = ["game-development"]
repository = "https://github.com/ickshonpe/bevy_despawn_tree"
description = "Despawn an entire parent-child entity hierarchy from any entity at any depth in the hierarchy."
readme = "README.md"

[dependencies]
bevy = { version = "0.8", default_features = false }

